# RAG_with_MCP_on_the_Databricks_Platform

./: README.md  client.py  pyproject.toml  server.py
